<resources>
    <string name="app_name">Gerenciador de Estudos</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string-array name="array_days_of_the_week">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string name="hint_from">De</string>
    <string name="hint_to">Às</string>
    <string-array name="array_task_type">
        <item>Aula</item>
        <item>Estudo</item>
        <item>Exercício</item>
        <item>Prova</item>
        <item>Trabalho</item>
    </string-array>
    <string name="confirm">Confirmar</string>
    <string name="action_search">Search</string>
    <string name="day">Dia: </string>
    <string name="order_by">Ordenar por: </string>
    <string name="tasks">Atividades</string>
    <string-array name="array_orderBy_week">
        <item>Dia</item>
        <item>Matéria</item>
        <item>Tipo</item>
    </string-array>
    <string-array name="array_orderBy_day">
        <item>Horário</item>
        <item>Matéria</item>
        <item>Tipo</item>
    </string-array>
    <string name="description">Descrição</string>
    <string name="action_edit">Editar</string>
    <string-array name="nav_drawer_labels">
        <item>Atividades</item>
        <item>Adicionar Atividade</item>
    </string-array>
    <string name="drawer_open">Drawer aberta</string>
    <string name="drawer_close">Drawer fechada</string>
    <string name="title_home">Atividades</string>
    <string name="title_add_task">Adicionar Atividade</string>
    <string name="title_my_score">Meus Pontos</string>
    <string-array name="array_task_listing_options">
        <item>Hoje</item>
        <item>Esta semana</item>
    </string-array>
    <string name="alarm">Alarme: </string>
    <string name="total_points">Total de pontos: </string>
    <string name="taks_finished">Atividades concluídas: </string>
    <string name="total_bets">Total de apostas: </string>
    <string name="bets_won">Apostas ganhas: </string>
    <string name="none">Nenhum</string>
    <string name="title_activity_login">Sign in</string>
    <string name="or">Ou</string>
    <string name="supervisor_email">Email do supervisor</string>
    <string name="subject">Matéria</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_finish">Concluir</string>
    <string name="sign_in_failed">Usuário e/ou senha inválido(s).</string>
    <string name="sign_up_failed">Erro ao cadastrar</string>
    <string name="sign_up_success">Cadastro concluído com sucesso</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_sign_up">Cadastrar-se</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_incorrect_email">Endereço de email incorreto</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_invalid_password">Senha incorreta</string>
    <string name="error_short_password">A senha é muito curta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
