<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.talles.android.daa_ti_tallesoliveira.fragment.WeekFragment">

    <TextView
        android:id="@+id/fragment_week_txtOrderBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/order_by"
        android:layout_marginLeft="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <Spinner
        android:id="@+id/fragment_week_spinner_orderBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/fragment_week_txtOrderBy"
        android:layout_toRightOf="@id/fragment_week_txtOrderBy"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="20dp">
    </Spinner>

    <TextView
        android:id="@+id/fragment_week_txtDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/day"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/fragment_week_spinner_orderBy"
        android:layout_toRightOf="@id/fragment_week_spinner_orderBy" />

    <Spinner
        android:id="@+id/fragment_week_spinner_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/fragment_week_txtDay"
        android:layout_toRightOf="@id/fragment_week_txtDay"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true">
    </Spinner>

    <TextView
        android:id="@+id/fragment_week_txtTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tasks"
        android:layout_below="@id/fragment_week_spinner_orderBy"
        android:layout_marginLeft="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <View
        android:id="@+id/fragment_week_line_tasks"
        android:layout_width="match_parent"
        android:background="@color/cinza_400"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:layout_below="@id/fragment_week_txtTasks" />

    <ListView
        android:id="@+id/fragment_week_listTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_week_line_tasks"
        android:layout_alignStart="@id/fragment_week_txtTasks"
        android:layout_alignLeft="@id/fragment_week_txtTasks">
    </ListView>

</RelativeLayout>