<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.talles.android.daa_ti_tallesoliveira.fragment.AddTaskFragment"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/add_task_txtDayWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dia da Semana"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/add_task_txtFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="De"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/add_task_txtTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Às"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/add_task_txtFrom"
                android:layout_toRightOf="@id/add_task_txtFrom"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/days_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_task_txtDayWeek"
                android:layout_alignStart="@id/add_task_txtDayWeek"
                android:layout_alignLeft="@id/add_task_txtDayWeek"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:padding="5dp"
                android:layout_marginBottom="10dp">
            </Spinner>

            <TextView
                android:id="@+id/add_task_EditFromTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_task_txtFrom"
                android:layout_centerHorizontal="true"
                android:layout_alignStart="@id/add_task_txtFrom"
                android:layout_alignLeft="@id/add_task_txtFrom"
                android:text="00:00"
                android:clickable="true"
                android:inputType="time"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/add_task_EditToTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_task_txtTo"
                android:layout_alignStart="@id/add_task_txtTo"
                android:layout_alignLeft="@id/add_task_txtTo"
                android:text="00:00"
                android:clickable="true"
                android:inputType="time"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"/>

            <View
                android:id="@+id/add_task_line_task_type"
                android:layout_width="match_parent"
                android:background="@color/cinza_400"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_below="@id/days_week"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/add_task_txtTask_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/add_task_line_task_type"
                android:layout_alignParentLeft="true"/>

            <Spinner
                android:id="@+id/add_task_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_task_txtTask_type"
                android:padding="5dp"
                android:paddingRight="20dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_marginBottom="10dp"
                android:layout_alignStart="@id/add_task_txtTask_type"
                android:layout_alignLeft="@id/add_task_txtTask_type">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_tast_input_subject"
                android:layout_below="@id/add_task_txtTask_type"
                android:layout_toEndOf="@id/add_task_type"
                android:layout_toRightOf="@id/add_task_type"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp">

                <EditText
                    android:id="@+id/add_task_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_task_input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:layout_below="@id/add_task_type"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                >

                <EditText
                    android:id="@+id/add_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_task_txtSupervisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="Supervisor"
                android:layout_below="@id/add_task_input_description"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <View
                android:id="@+id/add_task_line_supervisor"
                android:layout_width="match_parent"
                android:background="@color/cinza_400"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_below="@id/add_task_txtSupervisor" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_task_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/add_task_line_supervisor"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true">

                <EditText
                    android:id="@+id/add_task_supervisorEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/supervisor_email"
                    android:inputType="textEmailAddress"
                     />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/add_task_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_task_input_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:padding="15dp"
                android:text="@string/confirm"
                android:gravity="center" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
